--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-   "engines": {
+  "engines": {
     "node": "18.x"
   },
   "scripts": {
@@ -20,8 +20,7 @@
     "get-sitemap-links": "^1.0.6",
     "mongoose": "^6.7.4",
     "node": "^19.1.0",
-    "request-promise": "^4.2.6",
-    "node-schedule": "^2.1.0"
-    
+    "node-schedule": "^2.1.0",
+    "request-promise": "^4.2.6"
   }
 }
